...
        android:layout_height="24dp"
        android:contentDescription="@string/search_recipes"
        android:src="@drawable/search_icon"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/filterRecipesButton" />

    <!-- Search Recipes Icon -->
    <ImageView
        android:id="@+id/filterRecipesButton"
        android:layout_width="24dp"
        android:layout_height="24dp"
...
