...
        <item>Gluten Free</item>
        <item>Halal</item>
        <item>Nut Free</item>
        <item>Vegetarian</item>
        <item>Dairy Free</item>
    </string-array>
    <string name="select_tags_prompt">Please select a tag</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>



    <!-- Pantry Screen Titles -->
...
