...
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Add Ingredients Icon -->
    <ImageView
        android:id="@+id/addIngredientsButton"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:contentDescription="@string/add_ingredients"
        android:src="@drawable/upload_icon"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/searchIngredientsButton" />

    <!-- Search Ingredients Icon -->
    <ImageView
        android:id="@+id/searchIngredientsButton"
        android:layout_width="24dp"
        android:layout_height="24dp"
...
        android:paddingEnd="20dp"
        app:layout_constraintTop_toBottomOf="@id/headerText"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Ingredients RecyclerView -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_pantry"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/pantryStatusText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/clearPantryButton"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp" />

    <!-- Clear Pantry Button -->
    <ImageView
        android:id="@+id/clearPantryButton"
...
