...
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/delete_ingredient" />

    <!-- Done Button -->
    <Button
        android:id="@+id/doneButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/done" />
</LinearLayout>

